--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,14 +3,12 @@
     padding: 0;
     overflow: hidden;
 }
-
 h1{
     color: white;
     text-shadow: #141414 2px 2px 10px;
     padding-left:20px;
     padding-right: 20px;
 }
-
 body {
     height: 100vh;
     width: 100%;
@@ -19,12 +17,10 @@ body {
     font-size: 210%;
     background-image: url("bg3.png");
 }
-
 .container{
     height: 98%;
     width: auto;
 }
-
 .title {
     display: flex;
     align-items: center;
@@ -34,22 +30,33 @@ body {
     width: 100%;
     top: 0;
 }
-
 .content {
     display: flex;
     justify-content: center;
     height: 60%;
     width: auto;
 }
-
 img {
     height: 100%;
     width: auto;
+    animation: bobble 1s infinite;
 }
-
 .footer{
     bottom: 0;
     font-size: 10px;
     float: right;
     padding-right: 20px;
+}
+@keyframes bobble {
+    0% {
+        transform: translate3d(0px, 10px, 0px);
+        animation-timing-function: ease-in;
+    }
+    50% {
+        transform: translate3d(0px, 100px, 0px);
+        animation-timing-function: ease-out;
+    }
+    100% {
+        transform: translate3d(0px, 10px, 0px);
+    }
 }
